--- a/eyes-single.html
+++ b/eyes-single.html
@@ -12,6 +12,7 @@
         padding: 0;
         margin: 0;
         background-color: black;
+        overflow: hidden;
       }
   </style>
 </head>
